--- a/深入理解计算机系统（3）.md
+++ b/深入理解计算机系统（3）.md
@@ -841,7 +841,15 @@ void g()
 - 第二种情况：外部文件中存在`a=0;`那么它链接时，a会放在`.bss`中。
 - 第三种情况，外部文件中不存在a，那么它链接时，a会放在`.bss`中。
 
+#### 代码实现
 
+
+
+读取ELF文件
+
+第二十期视频：`read_elf`函数实现，
+
+c语言中`\r`是回到行首。
 
 #### `readelf`命令的使用
 
