done: parse elf with section header table and symbol table

--- a/深入理解计算机系统（3）.md
+++ b/深入理解计算机系统（3）.md
@@ -841,15 +841,211 @@ void g()
 - 第二种情况：外部文件中存在`a=0;`那么它链接时，a会放在`.bss`中。
 - 第三种情况，外部文件中不存在a，那么它链接时，a会放在`.bss`中。
 
-#### 代码实现
+### 代码实现
 
-
-
-读取ELF文件
-
-第二十期视频：`read_elf`函数实现，
+读取ELF文件第二十期视频：`read_elf`函数实现。
 
 c语言中`\r`是回到行首。
+
+#### 数据结构的定义
+
+节头表
+
+```c
+// section header table entry 
+typedef struct
+{
+    char sh_name[MAX_CHAR_SECTION_NAME];
+    uint64_t sh_addr;
+    uint64_t sh_offset; // line offset or effective line index
+    uint64_t sh_size;
+} sh_entry_t;
+```
+
+符号表
+
+```c
+typedef enum
+{
+    STB_LOCAL,
+    STB_GLOBAL,
+    STB_WEAK
+} st_bind_t;
+
+typedef enum
+{
+    STT_NOTYPE,
+    STT_OBJECT,
+    STT_FUNC
+} st_type_t;
+
+// symbol table entry 
+typedef struct
+{
+    char st_name[MAX_CHAR_SYMBOL_NAME];
+    st_bind_t bind;
+    st_type_t type;
+    char st_shndx[MAX_CHAR_SECTION_NAME];
+    uint64_t st_value;  // in-section offset
+    uint64_t st_size;   // count of lines of symbol
+} st_entry_t;
+
+```
+
+elf文件的结构定义
+
+```c
+typedef struct
+{
+    char buffer[MAX_ELF_FILE_LENGTH][MAX_ELF_FILE_WIDTH];
+    uint64_t line_count; // count of effective lines
+    
+    uint64_t sht_count;  // count of section header table lines
+    sh_entry_t *sht;
+
+    uint64_t symt_count; // count of symbol table lines
+    st_entry_t *symt;
+} elf_t;
+```
+
+
+
+#### 解析节头表和符号表
+
+总览：解析 `（column1, column2, column3）`格式的表的代码，因为节头表和符号表都是这种格式，所以我们需要这样的接口，方便后续的调用。下面是节头表和符号表的格式：
+
+```bash
+# section header table
+.text,0x0,4,22  # .text是section名
+.symtab,0x0,26,2  # .symtab是section名
+
+# symbol table
+sum,STB_GLOBAL,STT_FUNC,.text,0,22 # sum是函数名
+bias,STB_GLOBAL,STT_OBJECT,COMMON,8,8 # bias是变量名
+```
+
+`parse_table_entry`，在该函数中，变量`ent`是stack中的地址(`char ***`)，stack中存的是heap中的地址(`char **`)，该地址是指向字符数组(`char *`)。这里的star需要从后往前梳理。
+
+```c
+// 解析各种表
+// str: address pointing to the char string
+// ent: address in stack
+static int parse_table_entry(char *str, char ***ent)
+{
+    // column1, column2, column3,...
+    int count_col = 1;
+    int len = strlen(str);
+    
+    // count columns
+    for (int i = 0; i < len; i ++)
+    {
+        if (str[i] == ',')
+        {
+            count_col ++;
+        }
+    }
+
+    // malloc and create list
+    // arr pointing to each column, whose type is (char *)
+    char **arr = malloc(count_col * sizeof(char *)); 
+    *ent = arr; // ent pointing to each arr in heap, whose type is (char **)
+
+    int col_index = 0;
+    int col_width = 0;
+    char col_buf[32]; // 暂存每个column的内容
+
+    for (int i = 0; i < len + 1; i ++)
+    {
+        if (str[i] == ',' || str[i] == '\0')
+        {
+            // malloc and copy
+            char *col = malloc((col_width + 1) * sizeof(char)); // col: in heap
+            for (int j = 0; j < col_width; j ++)
+            {
+                col[j] = col_buf[j]; // copy from stack to heap
+            }
+            col[col_width] = '\0';
+
+            // update
+            arr[col_index] = col;
+            col_index ++;
+            col_width = 0;
+        }
+        else   // 一个column未结束
+        {
+            col_buf[col_width] = str[i];
+            col_width ++;
+        }
+    }
+    return count_col;
+}
+```
+
+`free_table_entry`主要是释放`parse_table_entry`函数中`malloc`创建的内存：
+
+```c
+// 释放内存
+// ** ent 为堆上的地址
+static void free_table_entry(char **ent, int n)
+{
+    for (int i = 0; i < n; i ++)
+    {
+        free(ent[i]); // 先free char *
+    }
+    free(ent); // 再free heap上的 char **
+}
+```
+
+所以`parse_table_entry` 和 `free_table_entry`需要配套使用，防止内存泄漏。
+
+##### 对于`char ***ent`的理解
+
+![image-20220127215929848](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220127215929848.png)
+
+
+
+##### 解析完节头表和符号表
+
+解析节头表的函数为`parse_sh`，解析符号表的函数为`parse_symtab`，这里暂且展示解析节头表的代码，解析符号表的可在github仓库中查看，思路基本相同。
+
+解析节头表：
+
+```c
+// 解析节头表的每行
+// str：each line of section header table
+// sh: each item resolved from str, saving in sh
+static void parse_sh(char *str, sh_entry_t *sh)
+{	// section table entry format:
+    // format: sh_name, sh_addr, sh_offset, sh_size
+    // example: .text,0x0,4,22
+    
+    char **cols; // address in stack, each column, e.g.: .text
+    int num_cols = parse_table_entry(str, &cols);
+    assert(num_cols == 4); // 解析出来如果不是4个column就报错
+
+    assert(sh != NULL);
+    strcpy(sh->sh_name, cols[0]);
+    sh->sh_addr = string2uint(cols[1]);
+    sh->sh_offset = string2uint(cols[2]); // 每个section具体的起始地址
+    sh->sh_size = string2uint(cols[3]);   // 每个section具体多少行
+
+    free_table_entry(cols, num_cols);  // parse_table_entry中使用malloc，需要配套的free
+}
+```
+
+##### 解析结果展示
+
+待解析的文件`sum.elf.txt`
+
+![image-20220128203523609](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220128203523609.png)
+
+解析结果
+
+![image-20220128203439691](https://raw.githubusercontent.com/shizhengLi/image_bed_01/main/img/image-20220128203439691.png)
+
+### 其他记录
+
+这里存放一些在视频中习得的知识。比如调试工具的使用等。
 
 #### `readelf`命令的使用
 
@@ -996,7 +1192,7 @@ $ hexdump -C elf.o
 
 
 
-### 其他记录
+#### 其他
 
 `elf.h`文件在`/usr/include/elf.h`，可以使用
 
